index jumbo image stretch fix

--- a/css/magokbd_ie8.css
+++ b/css/magokbd_ie8.css
@@ -401,7 +401,7 @@ main hr {
 	position:relative;
 	min-height:25%;/*
 	height:300px;*/
-	width:100%;
+	min-width:100%;
 	z-index:-99;/*
 	margin-top:-300px;*/
 	/*transition:transform 0.5s;*/
@@ -519,7 +519,7 @@ main hr {
 	}
 
 	.jumbo img {
-		width:100%;
+		min-width:100%;
 		min-height:100%;
 		height:auto;/*
 		left:50%;*/
